tests/NormalTests/paczka1/fuzzy1/57957761.err
Error in line 4: A144 S355 44,5
Error in line 9: A144 A144 119,2
Error in line 11: Igotdk S355 23,6
Error in line 13: Igotdk S861 62,7
Error in line 28: q6clkc4AmCs S355 87,1
Error in line 32: q6clkc4mCs 144 328,6
